testing/obj/main.adb.stderr
main.adb:2:01: error: compilation unit expected
